# Internship_API/src/main/java/com/example/internship_api/data/request/RouteUpdateRequest.java
@@ -1,4 +1,7 @@
 package com.example.internship_api.data.request;
 
-public record RouteUpdateRequest() {
+public record RouteUpdateRequest(
+        Long client_id,
+        Long driver_id
+) {
 }
